<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true"
    tools:context=".ManageLanguagesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:background="@drawable/rounded_solid"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:text="@string/download_language" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12dp"
                    android:text="@string/one_model_per_language" />

                <Button
                    android:id="@+id/button_test_voices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/test_languages"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/primaryDark"
                    android:textColor="@color/white"
                    android:onClick="testVoices"/>

                <TextView
                    android:id="@+id/download_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primaryDark"
                    android:visibility="gone"
                    android:textSize="18dp"
                    android:text="0 MB" />

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/start_main"
                    android:visibility="gone"
                    android:backgroundTint="@color/primaryDark"
                    android:textColor="@color/white"
                    android:onClick="startMain"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/piper_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:background="@drawable/rounded_solid"
                    android:textSize="18dp"
                    android:text="@string/piper_models"/>
                <ListView
                    android:id="@+id/piper_model_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp" />
                <TextView
                    android:id="@+id/coqui_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:padding ="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:background="@drawable/rounded_solid"
                    android:textSize="18dp"
                    android:text="@string/coqui_models"/>
                <ListView
                    android:id="@+id/coqui_model_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>